Inclusão de lista ao arquivo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Meu primeiro documento</title>
 </head>
 <body>
-    
+    <h1>Realizando Versionamentos com Git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vel, est illum eius sed amet repellat ipsam fugit modi ea accusamus magni numquam veniam reiciendis suscipit aperiam at eos quis!</p>
+    <h2>Vamos inserir listas nesse arquivo</h2>
+    <li>
+        <ul>
+            <li>Frutas</li>
+                <ol>
+                <li>Banana</li>
+                <li>Maçã</li>
+                <li>Uva</li>
+                <li>Abacaxi</li>
+                <li>Pera</li>
+                <li>Laranja</li>
+                </ol>
+            <li>Verduras</li>    
+                <ol>
+                    <li>Alface</li>
+                    <li>Agrião</li>
+                    <li>Rúcula</li>
+                    <li>Cebolinha</li>
+                    <li>Salsinha</li>
+                </ol>
+            <li>Legunmes</li>    
+                <ol>
+                    <li>Abóbora</li>
+                    <li>Batata</li>
+                    <li>Batata Doce</li>
+                    <li>Abobrinha</li>
+                </ol>
+
+        </ul>
+    </li>
 </body>
 </html>
