--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Realizando Versionamentos com Git</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vel, est illum eius sed amet repellat ipsam fugit modi ea accusamus magni numquam veniam reiciendis suscipit aperiam at eos quis!</p>
+    <h1>Alteração</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio dolores ullam vel excepturi fuga maxime, provident veniam esse, cupiditate ab pariatur facilis sint voluptatem tenetur eligendi similique repudiandae obcaecati aperiam?</p>
     <h2>Vamos inserir listas nesse arquivo</h2>
     <li>
         <ul>
