outro commit, desta vez em master

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Realizando Versionamentos com Git</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vel, est illum eius sed amet repellat ipsam fugit modi ea accusamus magni numquam veniam reiciendis suscipit aperiam at eos quis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam commodi modi quidem dolores, quos optio aperiam molestias minus quaerat nesciunt adipisci ratione, atque ipsa voluptates doloremque ex necessitatibus sit quis?</p>
     <h2>Vamos inserir listas nesse arquivo</h2>
     <li>
         <ul>
