Atualização a partir do Github

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Realizando Versionamentos com Git</h1>
+    <h2>Subtítulo adicionado ao arquivo</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vel, est illum eius sed amet repellat ipsam fugit modi ea accusamus magni numquam veniam reiciendis suscipit aperiam at eos quis!</p>
 =======
     <h1>Alteração</h1>
